# libspng

./: README.md  libspng.cabal
.circleci/: config.yml
app/example/: Main.hs  Main.hsc
src/: Libspng.hsc
src/Codec/Image/PNG/: Simple.hsc
src/Codec/Image/PNG/Simple/: Internal.hsc
src/Codec/Image/PNG/Simple/Error/: Internal.hsc
test/static/: Main.hs
