cabal-version:      2.2

name:               libspng
version:            0.2.0.0
synopsis:           Raw Haskell bindings to libspng.
description:        Raw Haskell bindings to [libspng](https://libspng.org/docs/).
homepage:           https://github.com/BurningWitness/libspng#readme
bug-reports:        https://github.com/BurningWitness/libspng/issues
author:             Oleksii Divak
maintainer:         Oleksii Divak <frozenwitness@gmail.com>
category:           Codec, Graphics, Image
copyright:          2022 Oleksii Divak
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: libspng/*.h

source-repository head
  type: git
  location: git://github.com/burningwitness/libspng.git

flag ccall
  description: Use the ccall call convention.
  default: False

flag stdcall
  description: Use the stdcall call convention (takes precedence over the ccall flag).
  default: False

common includes
  install-includes:   libspng/spng.h

  include-dirs:       libspng

  c-sources:          libspng/spng.c

library
  import:             includes

  exposed-modules:    Libspng

  reexported-modules: Foreign.Storable.Offset

  hs-source-dirs:     src

  ghc-options:        -Wall

  build-depends:      base            >= 4.10 && < 4.17
                    , storable-offset >= 0.1  && < 0.2
                    , zlib

  if flag(stdcall)
    cpp-options:      -DCALLCV=stdcall
  elif flag(ccall)
    cpp-options:      -DCALLCV=ccall
  else
    cpp-options:      -DCALLCV=capi

  default-language:   Haskell98
